--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,17 @@
-.swiper-slide {
+/* .swiper-slide {
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: #f0f0f0;
   border: 0px solid #ccc;
+} */
+/* @font-face {
+  font-family: "Hacen";
+  src: url("/fonts/Hacen Promoter Md.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
 }
+
+body {
+  font-family: "Hacen", sans-serif;
+} */
