--- a/src/component/Slider/style.css
+++ b/src/component/Slider/style.css
@@ -1,31 +1,26 @@
-.swiper {
-  width: 100%;
-  height: 100%;
-}
+
 
 .swiper-slide {
-  display: flex;
+  /* display: flex;
   justify-content: center;
   align-items: center;
   background-color: #f0f0f0;
-  border: 1px solid #ccc;
+  border: 1px solid #ccc; */
 }
 
 .swiper-button-prev,
 .swiper-button-next {
-  /* position: absolute; */
-  top: 50%;
-  /* transform: translateY(-50%); */
+  transform: translateY(-50%);
   width: 40px;
   height: 40px;
   background-color: rgba(0, 0, 0, 0.5);
   color: white;
   border-radius: 50%;
-  display: flex;
   align-items: center;
-  justify-content: center;
-  cursor: pointer;
   z-index: 10;
+}
+.swiper-button-next{
+ margin-left: 10px;
 }
 
 .swiper-button-prev::after,
@@ -34,35 +29,32 @@
   font-weight: bold;
 }
 
-.swiper-pagination-bullet {
-  background: #f5f5f2;
-}
-
-.swiper-pagination-bullet {
-  width: 22px;
-  height: 5px;
-  background-color: #fff;
-  border-radius: 50px;
-}
-.swiper-pagination-bullet-active {
-  width: 22px;
-  height: 5px;
-  background-color: red;
-  opacity: 1;
-  border-radius: 50px;
-}
-.mySwiper .swiper-pagination {
-  position: absolute;
-  bottom: -25px; /* تحريك النقاط لأسفل */
-  left: 50%;
-  transform: translateX(-50%);
-  background-color: aqua;
-}
-
 @media (max-width: 768px) {
-  /* Adjust breakpoint as needed */
   .swiper-button-prev,
   .swiper-button-next {
     display: none !important;
   }
 }
+
+.mySwiper .swiper-pagination {
+  position: relative;
+ margin-top: 30px;
+  z-index: 5000;
+}
+.swiper-pagination-bullet {
+  background-color: #333;
+  border-radius: 50px;
+  width: 25px;
+  height: 7px;
+}
+
+.swiper-pagination-bullet-active {
+  width: 25px;
+  height: 7px;
+  background-color: purple;
+  opacity: 1;
+  border-radius: 50px;
+}
+
+
+
