--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@plugin "daisyui";
 @import "swiper/css/pagination";
 @import "swiper/css/navigation";
 @import "swiper/css/scrollbar";
