--- a/src/component/Slider/style.css
+++ b/src/component/Slider/style.css
@@ -1,5 +1,3 @@
-
-
 .swiper-slide {
   /* display: flex;
   justify-content: center;
@@ -19,8 +17,8 @@
   align-items: center;
   z-index: 10;
 }
-.swiper-button-next{
- margin-left: 10px;
+.swiper-button-next {
+  margin-left: 10px;
 }
 
 .swiper-button-prev::after,
@@ -38,23 +36,20 @@
 
 .mySwiper .swiper-pagination {
   position: relative;
- margin-top: 30px;
+  margin-top: 30px;
   z-index: 5000;
 }
 .swiper-pagination-bullet {
-  background-color: #333;
+  background-color: #737373;
   border-radius: 50px;
-  width: 25px;
-  height: 7px;
+  width: 23px;
+  height: 5px;
 }
 
 .swiper-pagination-bullet-active {
-  width: 25px;
-  height: 7px;
+  opacity: 90%;
+  width: 23px;
+  height: 5px;
   background-color: purple;
-  opacity: 1;
   border-radius: 50px;
 }
-
-
-
