--- a/src/component/Slider/style.css
+++ b/src/component/Slider/style.css
@@ -36,20 +36,22 @@
 
 .mySwiper .swiper-pagination {
   position: relative;
-  margin-top: 15px;
+  margin-top: -15px;
   z-index: 5000;
 }
 .swiper-pagination-bullet {
-  background-color: #737373;
+  background-color: transparent;
+  border: black 1px solid ;
   border-radius: 50px;
-  width: 23px;
-  height: 5px;
+  width: 10px;
+  height: 10px;
 }
 
 .swiper-pagination-bullet-active {
   opacity: 90%;
-  width: 23px;
-  height: 5px;
-  background-color: purple;
+  width: 10px;
+  height: 10px;
+  border: #9810fa 1px solid ;
+  background-color: #9810fa;
   border-radius: 50px;
 }
