--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,9 @@
 /* @import "swiper/css/effect-coverflow"; */
 /* @import 'swiper/css/autoplay'; */
 @theme {
-  --breakpoint-xs: 480px;
+
+  --breakpoint-xxs: 20rem;
+  --breakpoint-xs: 30rem;
 
 }
 @custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
